--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,10 @@
-#RewriteEngine On
-#RewriteCond %{SERVER_PORT} 80
-#RewriteRule ^(.*)$ https://www.joverwijk.nl/$1 [R,L]
+RewriteEngine On
+
+# Redirect to HTTPS
+RewriteCond %{SERVER_PORT} 80
+RewriteRule ^(.*)$ https://www.joverwijk.nl/$1 [R,L]
+
+<Files .htaccess>
+    order allow,deny
+    deny from all
+</Files>
